--- a/themes/openy_themes/openy_lily/templates/node/node--branch--full.html.twig
+++ b/themes/openy_themes/openy_lily/templates/node/node--branch--full.html.twig
@@ -98,6 +98,7 @@ set classes = [
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12 back-link">
+              {# @todo move this url out of the template #}
               {{ link('Back to All Locations', 'internal:/locations' ) }}
           </div>
         </div>
@@ -158,6 +159,7 @@ set classes = [
       <div class="container">
         <div class="row">
           <div class="col-lg-12 back-link">
+              {# @todo move this url out of the template #}
             {{ link('Back to All Locations', 'internal:/locations' ) }}
           </div>
         </div>
