--- a/themes/openy_themes/openy_lily/sass/base/_colors.scss
+++ b/themes/openy_themes/openy_lily/sass/base/_colors.scss
@@ -31,3 +31,10 @@ $dark-green-aa: #007677;
 $yet-another-green: #01A490;
 
 $brown: #231f20;
+
+$extra-grey1: #555555;
+$extra-grey2: #a2a2a2;
+$extra-grey3: #e5e5e5;
+$extra-grey4: #777777;
+$extra-grey5: #a7a7a7;
+$extra-pink1: #aa228d;
