--- a/themes/openy_themes/openy_lily/sass/modules/_membership.scss
+++ b/themes/openy_themes/openy_lily/sass/modules/_membership.scss
@@ -1,4 +1,3 @@
-
 a[href="#step2"] {
   pointer-events: none;
 }
@@ -8,9 +7,11 @@ a[href="#step2"] {
     height: auto;
     max-width: 100%;
   }
-  .h1 {
-    margin-bottom: 30px;
-    padding-bottom: 4px;
+  h2 {
+     font-size: 40px;
+     text-align: center;
+     margin-bottom: 30px;
+     text-transform: uppercase;
   }
   .description {
     margin-bottom: -0.5em;
@@ -159,45 +160,44 @@ a[href="#step2"] {
 
 #membership-calc-wrapper .nav-pills {
   display: table;
-  width: 100%;
+  width: 111%;
   @include cachet();
   overflow: hidden;
   margin-bottom: 20px;
   font-size: 13px;
-  @include breakpoint($screen-sm) {
+  margin: 0 -15px;
+  @include breakpoint($screen-tablet) {
+    width: 100%;
     font-size: 20px;
     line-height: 42px;
+    margin: 0;
   }
   & > li {
     display: table-cell;
     float: none;
     vertical-align: middle;
-    @include breakpoint(0 $screen-xs) {
-      margin-bottom: 5px;
-      display: block;
-      overflow: hidden;
-    }
-    @include breakpoint($screen-xs) {
-      width: 34%;
-      &:last-child {
-        div {
-          padding-left: 25px;
-        }
+
+    &:last-child {
+      a {
+        padding-left: 25px;
+        width: 100%;
       }
     }
-    div {
+
+    a {
       text-decoration: none;
       position: relative;
-      white-space: nowrap;
       border-radius: 0;
-      color: white;
-      background-color: $pink;
-      text-align: center;
-      padding: 9px;
-      width: 90%;
-      @include breakpoint($screen-xs) {
+      color: $white;
+      background-color: $dark-magenta;
+      width: calc(100% - 30px);
+      text-align: left;
+      height: 68px;
+      @include breakpoint($screen-tablet) {
         display: block;
-        width: calc(100% - 30px);
+        white-space: nowrap;
+        text-align: center;
+        height: auto;
       }
       &:before {
         content: " ";
@@ -206,7 +206,7 @@ a[href="#step2"] {
         height: 0;
         border-top: 60px solid transparent;
         border-bottom: 60px solid transparent;
-        border-left: 30px solid white;
+        border-left: 30px solid $white;
         position: absolute;
         top: 50%;
         margin-top: -60px;
@@ -221,7 +221,7 @@ a[href="#step2"] {
         height: 0;
         border-top: 60px solid transparent;
         border-bottom: 60px solid transparent;
-        border-left: 30px solid $pink;
+        border-left: 30px solid $dark-magenta;
         position: absolute;
         top: 50%;
         margin-top: -60px;
@@ -229,33 +229,23 @@ a[href="#step2"] {
         left: 100%;
         z-index: 2;
       }
+
       .nav-pills__text {
         position: relative;
         z-index: 3;
       }
     }
-    .step-1,
-    .step-2 {
-      @include breakpoint($screen-xs) {
-        width: calc(100% - 15px);
-      }
+    a[href="#step1"],
+    a[href="#step2"] {
+      width: calc(100% - 15px);
+      padding-left: 25px;
     }
-    .step-2 {
-      .nav-pills__text {
-        margin-left: 5px;
-      }
-    }
-    &.active div,
-    &:first-child div {
+    &.active a {
       background-color: $purple;
     }
-    &:first-child div:after,
-    &.active div:after {
-      border-left: 30px solid $purple;;
+    &.active a:after {
+      border-left: 30px solid $purple;
     }
-  }
-  li + li {
-    margin-left: 0;
   }
 }
 
