--- a/themes/openy_themes/openy_lily/sass/modules/_branch.scss
+++ b/themes/openy_themes/openy_lily/sass/modules/_branch.scss
@@ -3,7 +3,7 @@
     display: none;
   }
   .desktop {
-    background-color: $pink;
+    background-color: $purple;
     color: $white;
     padding: 15px 0;
     min-height: 70px;
