--- a/themes/openy_themes/openy_lily/sass/paragraphs/_amenities.scss
+++ b/themes/openy_themes/openy_lily/sass/paragraphs/_amenities.scss
@@ -58,10 +58,17 @@
     margin: 0 15px 40px;
     legend {
       color: $default-grey;
+      span {
+        border-bottom: 1px solid #ccc;
+        color: $default-grey;
+        text-transform: none;
+        display: block;
+        margin: 20px 0;
+      }
     }
     form {
       margin-bottom: 1em;
-      .webform-options-display-one-column.form-checkboxes {
+      .fieldgroup.form-checkboxes {
         -webkit-columns: 2;
         -moz-columns: 2;
         columns: 2;
