--- a/themes/openy_themes/openy_lily/css/colors.css
+++ b/themes/openy_themes/openy_lily/css/colors.css
@@ -117,7 +117,7 @@ header#page-head .top-navs .nav-wrapper .main-nav #block-openy-lily-main-menu .n
 }
 
 #page-footer {
-  background: #fffff9;
+  background: #ffffff;
 }
 #page-footer nav ul li a,
 #page-footer #block-openy-lily-footermenucenter .nav li a,
