Add other fixes to the theme.

--- a/themes/openy_themes/openy_lily/templates/paragraphs/paragraph--featured-blogs--default.html.twig
+++ b/themes/openy_themes/openy_lily/templates/paragraphs/paragraph--featured-blogs--default.html.twig
@@ -44,7 +44,7 @@ set classes = [
   view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 ]
 %}
-{{ attach_library('openy_rose/blog_slider') }}
+{{ attach_library('openy_lily/blog_slider') }}
 <div{{ attributes.addClass(classes) }}>
   <h2 class="h1">
     {{ content.field_prgf_headline }}
