--- a/themes/openy_themes/openy_lily/templates/node/node--landing-page--full.html.twig
+++ b/themes/openy_themes/openy_lily/templates/node/node--landing-page--full.html.twig
@@ -110,7 +110,7 @@
 {# Two columns #}
 {% if node.field_lp_layout.value == "two_column" or node.field_lp_layout.value == "two_column_fixed" %}
   {% if node.field_lp_layout.value == "two_column_fixed" %}
-    {{ attach_library('openy_rose/landing') }}
+    {{ attach_library('openy_lily/landing') }}
   {% endif %}
   {% include "@openy_lily/node/include/node--landing-page--two-columns.html.twig" %}
 {% endif %}
