Add style fixes to the theme.

--- a/themes/openy_themes/openy_lily/css/colors.css
+++ b/themes/openy_themes/openy_lily/css/colors.css
@@ -1,6 +1,6 @@
 /* ---------- Color Module Styles ----------- */
 body {
-  background-color: #fffffb;
+  background-color: #ffffff;
   color: #636466;
 }
 a,
