--- a/themes/openy_themes/openy_lily/sass/paragraphs/_amenities.scss
+++ b/themes/openy_themes/openy_lily/sass/paragraphs/_amenities.scss
@@ -58,17 +58,10 @@
     margin: 0 15px 40px;
     legend {
       color: $default-grey;
-      span {
-        border-bottom: 1px solid #ccc;
-        color: $default-grey;
-        text-transform: none;
-        display: block;
-        margin: 20px 0;
-      }
     }
     form {
       margin-bottom: 1em;
-      .fieldgroup.form-checkboxes {
+      .webform-options-display-one-column.form-checkboxes {
         -webkit-columns: 2;
         -moz-columns: 2;
         columns: 2;
@@ -90,9 +83,6 @@
       }
       .form-item {
         margin: 0 0 5px;
-        input.form-checkbox {
-
-        }
         .field-amenities-icon {
           padding: 2px;
           width: 30px;
@@ -106,7 +96,6 @@
           .term-name {
             @media (max-width: $screen-phone) {
               width: auto;
-              
               font-weight: bold;
             }
             @media (min-width: $screen-tablet) {
@@ -143,6 +132,6 @@
 .list-branch-amenities-wrapper {
   h5 {
     font-size: 15px;
-    @include helvetica-neue();
+    @include verdana();
   }
 }
