--- a/themes/openy_themes/openy_lily/sass/global/_fonts.scss
+++ b/themes/openy_themes/openy_lily/sass/global/_fonts.scss
@@ -13,65 +13,50 @@
   font-style: normal;
 }
 
-@font-face {
-  font-family: 'Cachet';
-  src: url('../fonts/cachet/cachet-book.eot'); /* IE9 Compat Modes */
-  src: url('../fonts/cachet/cachet-book.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/cachet/cachet-book.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/cachet/cachet-book.woff') format('woff'), /* Pretty Modern Browsers */
-  url('../fonts/cachet/cachet-book.svg#cachet-book') format('svg'), /* Legacy iOS */
-  url('../fonts/cachet/cachet-book.ttf') format('truetype'); /* Safari, Android, iOS */
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Cachet Bold';
-  src: url('../fonts/cachet/cachet-bold.eot'); /* IE9 Compat Modes */
-  src: url('../fonts/cachet/cachet-bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/cachet/cachet-bold.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/cachet/cachet-bold.woff') format('woff'), /* Pretty Modern Browsers */
-  url('../fonts/cachet/cachet-bold.svg#cachet-bold') format('svg'), /* Legacy iOS */
-  url('../fonts/cachet/cachet-bold.ttf') format('truetype'); /* Safari, Android, iOS */
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Cachet Medium';
-  src: url('../fonts/cachet/cachet-medium.eot'); /* IE9 Compat Modes */
-  src: url('../fonts/cachet/cachet-medium.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/cachet/cachet-medium.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/cachet/cachet-medium.woff') format('woff'), /* Pretty Modern Browsers */
-  url('../fonts/cachet/cachet-medium.svg#cachet-medium') format('svg'), /* Legacy iOS */
-  url('../fonts/cachet/cachet-medium.ttf') format('truetype'); /* Safari, Android, iOS */
-  font-weight: 600;
-  font-style: normal;
-}
-
-@mixin cachet() {
-  font-family: "Cachet", Verdana, Geneva, sans-serif;
-  letter-spacing: -0.025em;
-}
-
-@mixin cachet-normal() {
-  @include cachet();
-  font-weight: normal;
-}
-
-@mixin cachet-bold() {
-  @include cachet();
-  font-weight: bold;
-}
+//@font-face {
+//  font-family: 'Cachet';
+//  src: url('../fonts/cachet/cachet-book.eot'); /* IE9 Compat Modes */
+//  src: url('../fonts/cachet/cachet-book.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//  url('../fonts/cachet/cachet-book.woff2') format('woff2'), /* Super Modern Browsers */
+//  url('../fonts/cachet/cachet-book.woff') format('woff'), /* Pretty Modern Browsers */
+//  url('../fonts/cachet/cachet-book.svg#cachet-book') format('svg'), /* Legacy iOS */
+//  url('../fonts/cachet/cachet-book.ttf') format('truetype'); /* Safari, Android, iOS */
+//  font-weight: normal;
+//  font-style: normal;
+//}
+//
+//@font-face {
+//  font-family: 'Cachet Bold';
+//  src: url('../fonts/cachet/cachet-bold.eot'); /* IE9 Compat Modes */
+//  src: url('../fonts/cachet/cachet-bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//  url('../fonts/cachet/cachet-bold.woff2') format('woff2'), /* Super Modern Browsers */
+//  url('../fonts/cachet/cachet-bold.woff') format('woff'), /* Pretty Modern Browsers */
+//  url('../fonts/cachet/cachet-bold.svg#cachet-bold') format('svg'), /* Legacy iOS */
+//  url('../fonts/cachet/cachet-bold.ttf') format('truetype'); /* Safari, Android, iOS */
+//  font-weight: 700;
+//  font-style: normal;
+//}
+//
+//@font-face {
+//  font-family: 'Cachet Medium';
+//  src: url('../fonts/cachet/cachet-medium.eot'); /* IE9 Compat Modes */
+//  src: url('../fonts/cachet/cachet-medium.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//  url('../fonts/cachet/cachet-medium.woff2') format('woff2'), /* Super Modern Browsers */
+//  url('../fonts/cachet/cachet-medium.woff') format('woff'), /* Pretty Modern Browsers */
+//  url('../fonts/cachet/cachet-medium.svg#cachet-medium') format('svg'), /* Legacy iOS */
+//  url('../fonts/cachet/cachet-medium.ttf') format('truetype'); /* Safari, Android, iOS */
+//  font-weight: 600;
+//  font-style: normal;
+//}
 
 body {
   -webkit-font-smoothing: antialiased;
-  font-family: Verdana, Geneva, sans-serif;
+  @include verdana();
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-weight: bold;
-  font-family: "Cachet", Verdana, Geneva, sans-serif;
+  @include cachet();
 }
 
 h1, .h1 {
