--- a/themes/openy_themes/openy_lily/sass/global/_openy-lily-styles.scss
+++ b/themes/openy_themes/openy_lily/sass/global/_openy-lily-styles.scss
@@ -301,7 +301,7 @@ body form .field--widget-boolean-checkbox {
   .read-more-wrapper a {
     color: #0089d0;
     font-size: 16px;
-    font-family: "Cachet", Verdana, Geneva, sans-serif;
+    @include cachet();
     font-weight: bold;
     text-transform: uppercase;
     -webkit-transition: color .2s ease-out;
@@ -403,7 +403,7 @@ p.legend {
       .modal-close {
         background: none;
         color: $white;
-        font-family: "Cachet", Verdana, Geneva, sans-serif;
+        @include cachet();
         font-weight: bold;
         right: 10px;
         text-decoration: none;
@@ -520,7 +520,7 @@ p.legend {
     background: $dark-magenta;
     border: 0;
     border-radius: 0;
-    font-family: "Cachet", Verdana, Geneva, sans-serif;
+    @include cachet();
     position: relative;
     padding: 17px 50px 15px;
     .ui-dialog-title {
@@ -543,7 +543,7 @@ p.legend {
       &::before {
         content: "X";
         color: $white;
-        font-family: "Cachet", Verdana, Geneva, sans-serif;
+        @include cachet();
         font-weight: bold;
         text-decoration: none;
       }
