--- a/themes/openy_themes/openy_lily/sass/misc/_blog.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_blog.scss
@@ -102,7 +102,7 @@
         font-size: 14px;
         line-height: 1.28;
         letter-spacing: 2px;
-        font-family: "Cachet", Verdana, Geneva, sans-serif;
+        @include cachet();
         padding: 0 22px;
       }
     }
@@ -121,7 +121,7 @@
 
 .back-to-blog {
   a {
-    font-family: "Cachet", Verdana, Geneva, sans-serif;
+    @include cachet();
     text-transform: uppercase;
   }
 }
@@ -150,7 +150,7 @@
     color: #5e5e5e;
     font-weight: bold;
     font-size: 24px;
-    font-family: "Cachet", Verdana, Geneva, sans-serif;
+    @include cachet();
     margin-bottom: 10px;
   }
   h2 {
