--- a/themes/openy_themes/openy_lily/sass/misc/_camps-locations.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_camps-locations.scss
@@ -116,7 +116,7 @@
   .back-link {
     text-transform: uppercase;
     font-weight: bold;
-    font-family: "Cachet", Verdana, Geneva, sans-serif;
+    @include cachet();
     a {
       color: rgba(255, 255, 255, 0.7);
       text-decoration: none;
@@ -143,7 +143,7 @@
       text-transform: uppercase;
       text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
       font-weight: bold;
-      font-family: "Cachet", Verdana, Geneva, sans-serif;
+      @include cachet();
       margin: 0;
       min-height: 55px;
       font-size: 48px;
@@ -184,7 +184,7 @@
       border-radius: 3px;
       text-transform: uppercase;
       font-weight: bold;
-      font-family: "Cachet", Verdana, Geneva, sans-serif;
+      @include cachet();
       margin-top: 0;
       padding: 12px 20px;
       outline: 0;
