--- a/themes/openy_themes/openy_lily/sass/misc/_settings.scss
+++ b/themes/openy_themes/openy_lily/sass/misc/_settings.scss
@@ -14,7 +14,7 @@
       color: white;
       font-size: 48px;
       text-transform: uppercase;
-      font-family: 'Cachet', Verdana, Geneva, sans-serif;
+      @include cachet();
       font-weight: bold;
     }
   }
