--- a/themes/openy_themes/openy_lily/sass/modules/_membership.scss
+++ b/themes/openy_themes/openy_lily/sass/modules/_membership.scss
@@ -314,7 +314,7 @@ a[href="#step2"] {
     margin-top: 20px;
     margin-bottom: 10px;
     font-size: $h2-size;
-    font-family: $font-style-cachet-ubuntu;
+    @include cachet();
     font-weight: 500;
     line-height: 1.1;
     color: inherit;
