[OYPD-645]: Rename Promo Text paragraph type to Secondary Description and Sidebar; Refactoring.

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/templates/paragraph--secondary-description-sidebar.html.twig
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_secondary_description_sidebar/templates/paragraph--secondary-description-sidebar.html.twig
@@ -45,10 +45,10 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-6 left">
-        {{ content.field_description }}
+        {{ content.field_prgf_left_column_block }}
       </div>
       <div class="col-sm-5 col-sm-offset-1 right">
-        {{ content.field_sidebar }}
+        {{ content.field_prgf_right_column_block }}
       </div>
     </div>
   </div>
