[YTCDN-100][YTCDN-101][YTCDN-102][YTCDN-103][YTCDN-105][YTCDN-106][YTCDN-108] Small UX changes for cdn

--- a/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-village-teaser.html.twig
+++ b/docroot/modules/custom/ymca_camp_du_nord/templates/cdn-village-teaser.html.twig
@@ -10,8 +10,8 @@
   <div class="inner">
     <img src="{{ image }}" alt="{{ title }}" />
     <div class="info">
-      <span class="title">{{ title }}</span>
       <span class="capacity"><i class="fa fa-user"></i>{{ capacity }}</span>
     </div>
   </div>
+  <h3 class="title">{{ title }}</h3>
 </a>
