--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -2172,26 +2172,38 @@ body {
 .paragraph--type--news-posts-listing .views-exposed-form,
 .paragraph--type--latest-news-posts .views-exposed-form,
 .paragraph--type--latest-news-posts-camp .views-exposed-form,
-.paragraph--type--latest-news-posts-branch .views-exposed-form {
+.paragraph--type--latest-news-posts-branch .views-exposed-form,
+.paragraph--type--featured-news .views-exposed-form {
   margin-bottom: 30px;
 }
 @media (min-width: 48em) {
   .paragraph--type--blog-posts-listing .blog-more-teaser-results-wrapper,
   .paragraph--type--blog-posts-listing .news-more-teaser-results-wrapper,
+  .paragraph--type--blog-posts-listing .wrapper-field-fnews-posts,
   .paragraph--type--latest-blog-posts .blog-more-teaser-results-wrapper,
   .paragraph--type--latest-blog-posts .news-more-teaser-results-wrapper,
+  .paragraph--type--latest-blog-posts .wrapper-field-fnews-posts,
   .paragraph--type--latest-blog-posts-camp .blog-more-teaser-results-wrapper,
   .paragraph--type--latest-blog-posts-camp .news-more-teaser-results-wrapper,
+  .paragraph--type--latest-blog-posts-camp .wrapper-field-fnews-posts,
   .paragraph--type--latest-blog-posts-branch .blog-more-teaser-results-wrapper,
   .paragraph--type--latest-blog-posts-branch .news-more-teaser-results-wrapper,
+  .paragraph--type--latest-blog-posts-branch .wrapper-field-fnews-posts,
   .paragraph--type--news-posts-listing .blog-more-teaser-results-wrapper,
   .paragraph--type--news-posts-listing .news-more-teaser-results-wrapper,
+  .paragraph--type--news-posts-listing .wrapper-field-fnews-posts,
   .paragraph--type--latest-news-posts .blog-more-teaser-results-wrapper,
   .paragraph--type--latest-news-posts .news-more-teaser-results-wrapper,
+  .paragraph--type--latest-news-posts .wrapper-field-fnews-posts,
   .paragraph--type--latest-news-posts-camp .blog-more-teaser-results-wrapper,
   .paragraph--type--latest-news-posts-camp .news-more-teaser-results-wrapper,
+  .paragraph--type--latest-news-posts-camp .wrapper-field-fnews-posts,
   .paragraph--type--latest-news-posts-branch .blog-more-teaser-results-wrapper,
-  .paragraph--type--latest-news-posts-branch .news-more-teaser-results-wrapper {
+  .paragraph--type--latest-news-posts-branch .news-more-teaser-results-wrapper,
+  .paragraph--type--latest-news-posts-branch .wrapper-field-fnews-posts,
+  .paragraph--type--featured-news .blog-more-teaser-results-wrapper,
+  .paragraph--type--featured-news .news-more-teaser-results-wrapper,
+  .paragraph--type--featured-news .wrapper-field-fnews-posts {
     margin-left: -15px;
     margin-right: -15px;
   }
@@ -4445,14 +4457,41 @@ html.js .branch__updates_queue__button {
 }
 .node--type-news.node--view-mode-teaser {
   margin: auto;
-  max-width: 373px;
-  width: 100%;
+}
+@media (min-width: 30em) {
+  .node--type-news.node--view-mode-teaser {
+    max-width: 373px;
+    width: 100%;
+  }
 }
 .node--type-news.node--view-mode-teaser .inner-wrapper {
-  margin: 15px 0;
+  height: 240px;
+  width: 288px;
+  margin: 15px auto;
   position: relative;
   overflow: hidden;
-  height: 250px;
+}
+@media (min-width: 30em) {
+  .node--type-news.node--view-mode-teaser .inner-wrapper {
+    height: 288px;
+    width: auto;
+  }
+}
+@media (min-width: 48em) {
+  .node--type-news.node--view-mode-teaser .inner-wrapper {
+    height: 288px;
+    width: auto;
+  }
+}
+@media (min-width: 62em) {
+  .node--type-news.node--view-mode-teaser .inner-wrapper {
+    height: 245px;
+  }
+}
+@media (min-width: 75em) {
+  .node--type-news.node--view-mode-teaser .inner-wrapper {
+    height: 300px;
+  }
 }
 .node--type-news.node--view-mode-teaser img {
   height: auto;
